--- a/example/index.html
+++ b/example/index.html
@@ -54,7 +54,7 @@
     </div>
 
     <!-- You can now set the turtle over here: -->
-    <script id="turtle" type="text/rdf+turtle">
+    <script id="turtle" type="text/turtle">
         @prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
         @prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
         @prefix owl: <http://www.w3.org/2002/07/owl#> .
